--- a/src/pages/Home/home.module.css
+++ b/src/pages/Home/home.module.css
@@ -56,19 +56,36 @@ h2{
 /* skills */
 
 .skills {
-  width: 70%;
-  margin: auto;
+  background-color: rgb(248, 248, 248);
     & h2,p{
       text-align: center;
+    }
+    & img {
+      height: 450px;
+      border: 1px solid black;
     }
 }
 
 .skillsBlock{
+  width: 70%;
+  margin: auto;
+  margin-top: 60px;
+  padding: 20px;
+  border-radius: 12px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: white ;
+  box-shadow: 0px 2px 12px 6px rgba(0,0,0,0.13);
 
 }
 .bar{
   width: 400px;
+}
+
+.skillsBlock div:nth-child(2){
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+
 }
