--- a/src/pages/Home/home.module.css
+++ b/src/pages/Home/home.module.css
@@ -139,8 +139,17 @@ h2{
       padding-top: 20 px;
     }
 }
-.backgroundImage{
+
+.backgroundFirstImage{
   background-image: url("../../assets/gpadi.png");
+  background-size: cover;
+  background-position: center;
+  width: 270px;
+  height: 160px;
+}
+
+.backgroundSecondImage{
+  background-image: url("../../assets/calculator.png");
   background-size: cover;
   background-position: center;
   width: 270px;
@@ -175,10 +184,50 @@ height: 200px;
     
 }
 
+
+/* contact */
+
+
+.divForm {
+  margin: auto;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  
+}
+
+.form {
+  background-color: #f5f5f5;
+  padding: 30px;
+  margin-top: 30px;
+  border-radius: 20px;
+  box-shadow: 0px 2px 12px 6px rgba(0,0,0,0.11);
+}
+
+form h2 {
+  background-color: #e09b14;
+  padding: 6px 100px;
+  margin-top: 30px;
+  border-radius: 10px;
+  color: white;
+  font-weight: 300;
+  font-size: 25px;
+  text-align: center;
+}
+
+.marginTop {
+  margin-top: 10px;
+}
+
+
 footer {
   background-color: rgb(201, 197, 175);
   height: 100px;
 }
+
+
 
 @media (max-width: 1000px){
   .firstSection{
@@ -222,3 +271,4 @@ footer {
   }
   
 }
+
