--- a/src/index.css
+++ b/src/index.css
@@ -28,10 +28,7 @@ body {
   place-items: center;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
+
 
 button {
   border-radius: 8px;
@@ -64,3 +61,11 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
+h1{
+  font-family: 'VT323', monospace;
+}
+@media (max-width: 693px){
+  h1{
+  font-size: 1em!important;
+}}
+
