--- a/src/pages/Home/home.module.css
+++ b/src/pages/Home/home.module.css
@@ -1,23 +1,32 @@
+*{
+  font-family: "Roboto", sans-serif;
+}
+body{
+  width: 100%;
+}
 .backgroundFirstSection{background-image: url(../../assets/and-machines-Me8j_wpviPM-unsplash.jpg);
   background-size: cover;
   width: 100%;
-  height: 600px;
+  height: 100vh;
   display: flex;
   align-items:center
 ;
-  justify-content: space-between;
+flex-direction: row;
+ 
 }
 
 .firstSection{
+  display: flex;
+  align-items:center
+;
+flex-direction: column;
+  justify-content: space-between;
     & img{
       height: 350px;
-      margin-left: 70px;
+      margin-left: 130px;
+      
     }
     & .h1 { 
-      /* -webkit-animation:tracking-in-expand .7s cubic-bezier(.215,.61,.355,1.000) both;
-      animation:tracking-in-expand .7s cubic-bezier(.215,.61,.355,1.000) both; */
-     
-      font-size: 17px!important;
       font-family: 'VT323', monospace;
       margin-top: 60px;
       padding-bottom: 20px;
@@ -32,12 +41,7 @@
    
 }
  .h1 { 
-  /* -webkit-animation:tracking-in-expand .7s cubic-bezier(.215,.61,.355,1.000) both;
-  animation:tracking-in-expand .7s cubic-bezier(.215,.61,.355,1.000) both; */
- 
-  font-size: 17px!important;
   font-family: 'VT323', monospace;
-  margin-top: 60px!important;
   padding-bottom: 20px;
   color: white;
   width: 57%;
@@ -48,6 +52,7 @@
 
 .fixedContainer {
   position: absolute;
+  left:14px;
   padding-left: 10px;
   text-align: start;
   width: 97%;
@@ -59,6 +64,7 @@
 
 h2{
   font-size: 35px;
+  
 }
 
 
@@ -67,7 +73,7 @@ h2{
 /* a propos */
 
 .aPropos{
-  background-color: rgb(247, 246, 240);
+  background-color: rgb(245, 243, 232);
   display: flex;
   justify-content: center;
   padding: 50px 70px;
@@ -75,13 +81,19 @@ h2{
     & img{
       height: 400px;     
     }
+    & p{
+      background-color: white;
+      box-shadow: 0px 2px 12px 6px rgba(0,0,0,0.11);
+      padding: 15px;
+      border-radius: 20px;
+    }
 }
 
 /* skills */
 
 
 .skills {
-  background-color: rgb(248, 248, 248);
+  background-color: rgb(249, 249, 249);;
   padding-bottom: 60px;
     & h2,p{
       text-align: center;
@@ -106,15 +118,33 @@ h2{
   padding: 20px;
   border-radius: 12px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  background-color: white ;
-  box-shadow: 0px 2px 12px 6px rgba(0,0,0,0.13);
+  box-shadow: 0px 2px 12px 6px rgba(0,0,0,0.11);
+  row-gap: 30px;
+  & h3{
+    margin-top: 0;
+  }
+  
 
 }
-.bar{
-  width: 400px;
+.progressBlock{
+  
+  width: 600px;
+  border-radius: 12px;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+ 
 }
+.bar{
+  width: 90%;
+  margin-top: 10px;
+  
+}
+
 
 .skillsBlock div:nth-child(2){
   display: flex;
@@ -123,7 +153,9 @@ h2{
 
 }
 
-
+.buttonCV{
+  background-color:  rgb(201, 197, 175);
+}
 
 /* Mes projets */
 
@@ -131,7 +163,7 @@ h2{
   background-color:rgb(247, 246, 240);
   padding-bottom: 140px;
     & img{
-      width: 270px;
+      
       height: 200px;
     
     }
@@ -140,92 +172,122 @@ h2{
       margin-top: 0;
       padding-top: 40px;
     }
+    & h3{
+      margin-top: 0;
+    }
 }
 
 .alignCenter{
  text-align: center;
 }
 
-.backgroundFirstImage{
+.backgroundGpadi{
   background-image: url("../../assets/gpadi.png");
   background-size: cover;
   background-position: center;
-  width: 270px;
+  width: 220px;
   height: 160px;
 }
 
-.backgroundSecondImage{
+.backgroundCalculator{
   background-image: url("../../assets/calculator.png");
   background-size: cover;
   background-position: center;
-  width: 270px;
+  width: 220px;
   height: 160px;
 }
 
-.backgroundLastImage{
+.backgroundToDo{
+  background-image: url("../../assets/toDo.png");
+  background-size: cover;
+  background-position: center;
+  width: 220px;
+  height: 160px;
+}
+.backgroundCloud{
   background-image: url("../../assets/cloud.png");
   background-size: cover;
   background-position: center;
-  width: 270px;
+  width: 220px;
   height: 160px;
 }
 
-.divBlockProjets{
-height: 200px;
-
-}
 
 .blockProjets {
   display: flex;
   width: 75%;
   margin: auto;
-  column-gap: 60px;
+  column-gap: 30px;
   align-items: center;
   justify-content: center;
-    & .backgroundColor{ 
-      height: 400px;
-      transition: all 0.2s ease;
-      background-color: white;
-      box-shadow: 0px 2px 12px 6px rgba(0,0,0,0.11);
-      padding: 40px;
-      border-radius: 10px;
-      margin-top: 20px;
-    }
-    & .backgroundColor:hover{
-      transition: all 0.2s ease;
-      box-shadow: 0px 2px 12px 6px rgba(0,0,0,0.15);
-      padding: 42px;
-    }
     
+}
+.backgroundColor{ 
+  transition: all 0.2s ease;
+  background-color: white;
+  box-shadow: 0px 2px 12px 6px rgba(0,0,0,0.11);
+  padding: 40px;
+  border-radius: 10px;
+  margin-top: 20px;
+  width: 300px;
+}
+ .backgroundColor:hover{
+  transition: all 0.2s ease;
+  box-shadow: 0px 2px 12px 6px rgba(0,0,0,0.15);
+  padding: 42px;
+}
+
+
+@media (min-width: 768px) {
+  .backgroundColor{ 
+    height: 400px;}
+  .divBlockProjets{
+    height: 200px;
+      
+      }
 }
 
 .txtCard{
   height: 5em;
+  width: 200px;
+  margin: 1em auto;
 }
 
 
 /* contact */
 
 .contact h2{
-  text-align: center;
+  text-align: center; 
+  margin-top: 0;
 }
+.h2contact{
+  padding-top: 50px;
+  color: white;
+}
+.pcontact{
+  color: white;
+}
+
 .divForm {
   margin: auto;
   width: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: white;
+ 
   
 }
 
 .form {
   background-color: #f5f5f5;
   padding: 30px;
-  margin-top: 30px;
+  padding-top: 30px;
   margin-bottom: 70px;
   border-radius: 20px;
   box-shadow: 0px 2px 12px 6px rgba(0,0,0,0.11);
+  & .link {
+    color: purple;
+  }
 }
 
 form h2 {
@@ -244,21 +306,73 @@ form h2 {
 }
 
 
-
-footer {
-  background-color: rgb(201, 197, 175);
-  height: 100px;
+.contact{
+ background-image: url(../../assets/and-machines-Me8j_wpviPM-unsplash.jpg);
+ background-size: cover;
 }
 
+/* Footer */
+footer {
+  background-color: rgb(201, 197, 175);
 
+}
+footer h3{
+  text-align: center;
+  font-weight: 300;
+  padding-top: 40px;
+  padding-left: 50px;
+}
+.divFooter{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.alignItem{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  column-gap: 15px;
+}
+li img{
+  height: 40px;
+  width: 40px;
+}
+li{
+  text-align: center;
+}
+.row{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 20px;
+}
 
 @media (max-width: 1000px){
   .firstSection{
+     display: flex;
+    flex-direction: column;
+    align-items: center;
+    & h1{
+      height: 1em !important;
+      text-align: center;
+    }
+    & img{
+      margin: 0;
+    }
+  }
+  .backgroundFirstSection{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: center;
       & img {
-        width: 200px;
-        height: 200px;
+        margin-top: 80px;
+      
+        height: 120px;
       }
   }
   .skillsBlock{
@@ -268,17 +382,19 @@ footer {
     align-items: center;
   }
 
+  
+  
+}
+
+@media (max-width :880px){
   .blockProjets{
     display: flex;
     flex-direction: column;
   }
-  
-}
 
-@media (max-width :700px){
-  .backgroundFirstSection{
+  .backgroundColor{
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
       & img{
         margin-left: 0;
       }
@@ -292,7 +408,50 @@ footer {
   .bar{
     width: 200px;
   }
+.skills{
+  & img{ height:200px
+
+  }
+  & .progressBlock{
+    width: 30px;
+  }
+}
   
 }
 
+ li{
+  list-style: none;
+  
+    
+ }
+
+ @media (max-width:693px){
+  .fixedContainer {
+    height: 90px;
+  }
+  .form h2{
+    padding: 0;
+  }
+  .aPropos{
+    padding: 50px 40px;
+  }
+  .aPropos img{
+    height: 300px;
+  }
+  .backgroundColor {
+    width: 250px;
+  }
+    
+ }
+ @media (min-width:693px){
+  .fixedContainer {
+    height: 150px;}
+    
+ }
+ @media (min-width:1000px){
+  .fixedContainer {
+    height: 100px;}
+    
+ }
+ 
  
