--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,5 +1,74 @@
-@media (max-width:760px){
-  .root{
+
+.imgS {
+  display: flex;
+  justify-content: center;
+}
+.subItem {
+  color: #070707;
+  font-size: 14px;
+  font-weight: 600;
+}
+Button{color: #fff;
+  &:focus {
+    outline: none;
+  }
+}
+
+@media (min-width: 700px) {
+  .logo {
+    margin: 0;
+    width: 75px;
+  }
+
+  .root {
+    padding: 12px 0 0 12px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+  
+    position: fixed;
+    top: 0;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 100;
+  }
+
+  .nav {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .burger {
+    display: none;
+  }
+}
+
+@media (max-width: 700px) {
+  .logo {
+    margin: 0;
+    width: 75px;
+  }
+
+  .root {
+    padding: 12px 0 0 12px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    height: 80px;
+    position: fixed;
+    top: 0;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 100;
+  }
+
+  .nav {
+    width: 100%;
+    display: flex;
+    justify-content: center;
     display: none;
   }
 }
