--- a/src/components/MobileMenu/mobilemenu.module.css
+++ b/src/components/MobileMenu/mobilemenu.module.css
@@ -41,3 +41,7 @@
   background-color: white; /* Afficher la navigation en la déplaçant vers la gauche */
 }
 
+.nav{
+  background-color: none;
+}
+
