--- a/src/pages/Home/home.module.css
+++ b/src/pages/Home/home.module.css
@@ -23,7 +23,7 @@ flex-direction: column;
   justify-content: space-between;
     & img{
       height: 350px;
-      margin-left: 230px;
+      margin-left: 80px;
       
       
     }
@@ -77,10 +77,11 @@ h2{
   background-color: rgb(245, 243, 232);
   display: flex;
   justify-content: center;
+  align-items: center;
   padding: 50px 70px;
   column-gap: 50px;
     & img{
-      height: 400px;     
+      height: 500px;     
     }
     & p{
       background-color: white;
@@ -182,6 +183,7 @@ h2{
  text-align: center;
 }
 
+
 .backgroundGpadi{
   background-image: url("../../assets/gpadi.png");
   background-size: cover;
@@ -235,9 +237,28 @@ h2{
  .backgroundColor:hover{
   transition: all 0.2s ease;
   box-shadow: 0px 2px 12px 6px rgba(0,0,0,0.15);
-  padding: 42px;
-}
 
+}
+.git{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  & h3{
+    padding-top: 50px;
+  }
+  & .boxGit{
+    height: 90px;
+  }
+  & img{
+    height: 60px;
+    transition: all 0.3s ease;
+  }
+  & img:hover{
+    height: 70px;
+    transition: all 0.3s ease;
+  }
+}
 
 @media (min-width: 768px) {
   .backgroundColor{ 
@@ -321,7 +342,6 @@ footer h3{
   text-align: center;
   font-weight: 300;
   padding-top: 40px;
-  padding-left: 50px;
 }
 .divFooter{
   display: flex;
@@ -354,6 +374,9 @@ li{
 }
 
 @media (max-width: 1000px){
+  .fixedContainer {
+    height: 90px;
+  }
   .firstSection{
      display: flex;
     flex-direction: column;
@@ -372,7 +395,7 @@ li{
     align-items: center;
       & img {
         margin-top: 80px;
-        margin-right: 60px;
+        
         height: 120px;
       }
   }
@@ -411,7 +434,8 @@ li{
     width: 200px;
   }
 .skills{
-  & img{ height:200px
+  & img{ height:200px;
+    width: 150px;
 
   }
   & .progressBlock{
@@ -428,9 +452,7 @@ li{
  }
 
  @media (max-width:693px){
-  .fixedContainer {
-    height: 90px;
-  }
+  
   .form h2{
     padding: 0;
   }
@@ -448,14 +470,13 @@ li{
   }
     
  }
- @media (min-width:693px){
-  .fixedContainer {
-    height: 150px;}
-    
- }
+
  @media (min-width:1000px){
   .fixedContainer {
     height: 100px;}
+    .txtCard{
+      text-align: center;
+     }
     
  }
  @media (min-width:1200px){
@@ -469,4 +490,8 @@ li{
   .fixedContainer {
     height: 150px;}
  }
- 
+
+ul{
+  margin-block-start: 0;
+  padding: 0;
+}
