--- a/src/pages/Home/home.module.css
+++ b/src/pages/Home/home.module.css
@@ -151,6 +151,8 @@ h2{
 .skillsBlock div:nth-child(2){
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   row-gap: 20px;
 
 }
@@ -435,7 +437,7 @@ li{
   }
 .skills{
   & img{ height:200px;
-    width: 150px;
+    width: 135px;
 
   }
   & .progressBlock{
